fix: content overflow

--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ html{
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
-    
+    padding-bottom: 100px;
 }
 body{
     height : 100%;
